--- a/api/package.json
+++ b/api/package.json
@@ -14,7 +14,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
+    
   },
   "author": "",
   "license": "ISC"
